--- a/src/index.html
+++ b/src/index.html
@@ -8,125 +8,125 @@
   <body>
     <main class="main">
       <section class="section">
-        <h1>dine</h1>
+        <h1 class="text">dine</h1>
         <div class="text-group">
-          <h2>Exquisite dining since 1989</h2>
-          <p>
+          <h2 class="text">Exquisite dining since 1989</h2>
+          <p class="text">
             Experience our seasonal menu in beautiful country surroundings. Eat
             the freshest produce from the cofmoft of our farmhouse.
           </p>
         </div>
-        <input type="button" value="BOOK A TABLE" />
+        <input type="button" class="button" value="BOOK A TABLE" />
         <div class="crop">
           <img src="" alt="Seafood dish" />
         </div>
       </section>
       <section class="section">
         <img src="" alt="Farmland with a creek and hedgerows" />
-        <img src="" alt="pattern" />
+        <img src="" alt="pattern" class="pattern" />
         <div class="text-group">
-          <h3>Enjoyable place for all the family</h3>
-          <p>
+          <h3 class="text">Enjoyable place for all the family</h3>
+          <p class="text">
             Our relaxed surroundings make dining with us a great experience for
             everyone. We can even arrange a tour of the farm before your meal.
           </p>
-          <img src="" alt="pattern" />
+          <img src="" alt="pattern" class="pattern" />
         </div>
       </section>
       <section class="section">
         <div class="text-group">
-          <h3>The most locally sourced food</h3>
-          <p>
+          <h3 class="text">The most locally sourced food</h3>
+          <p class="text">
             All our ingredients come directly from our farm or local fishery. So
             you can be sure that you're eating the freshest, most sustainable
             food.
           </p>
-          <img src="" alt="pattern" />
+          <img src="" alt="pattern" class="pattern" />
         </div>
         <img src="" alt="A chef preparing a dish" />
-        <img src="" alt="pattern" />
-        <img src="" alt="pattern" />
+        <img src="" alt="pattern" class="pattern" />
+        <img src="" alt="pattern" class="pattern" />
       </section>
       <section class="section">
         <div class="text-group">
-          <h3>A few highlights from our menu</h3>
-          <p>
+          <h3 class="text">A few highlights from our menu</h3>
+          <p class="text">
             We cater for all dietary requirements, but here's a glimpse at some
             of our diner's favourites. Our menu is revamped every season.
           </p>
-          <img src="" alt="pattern" />
+          <img src="" alt="pattern" class="pattern" />
         </div>
         <div>
           <img src="" alt="Seared salmon fillet" />
           <div class="text-group">
-            <h4>Seared Salmon fillet</h4>
-            <p>
+            <h4 class="text">Seared Salmon fillet</h4>
+            <p class="text">
               Our locally sourced salmon served with a refreshing buckwheat
               summer salad.
             </p>
-            <img src="" alt="pattern" />
+            <img src="" alt="pattern" class="pattern" />
           </div>
         </div>
         <div>
           <img src="" alt="Rosemary filet mignon" />
           <div class="text-group">
-            <h4>Rosemary Filet Mignon</h4>
-            <p>
+            <h4 class="text">Rosemary Filet Mignon</h4>
+            <p class="text">
               Our prime beef served to your taste with a delicious choice of
               seasonal sides.
             </p>
-            <img src="" alt="pattern" />
+            <img src="" alt="pattern" class="pattern" />
           </div>
         </div>
         <div>
           <img src="" alt="Fruit chocolate mousse" />
           <div class="text-group">
-            <h4>Summer Fruit Chocolate Mousse</h4>
-            <p>
+            <h4 class="text">Summer Fruit Chocolate Mousse</h4>
+            <p class="text">
               Creamy mousse combined with summer fruits and dark chocolate
               shavings.
             </p>
-            <img src="" alt="pattern" />
+            <img src="" alt="pattern" class="pattern" />
           </div>
         </div>
       </section>
       <section class="section">
-        <img src="" alt="pattern" />
-        <img src="" alt="pattern" />
+        <img src="" alt="pattern" class="pattern" />
+        <img src="" alt="pattern" class="pattern" />
         <img src="" alt="Family eating dinner at a large Table" />
         <div class="text-group">
-          <h3>Family Gathering</h3>
-          <p>
+          <h3 class="text">Family Gathering</h3>
+          <p class="text">
             We love catering for entire families. So please bring everyone along
             for a special meal with your loved ones. We'll provide a memorable
             experience for all.
           </p>
         </div>
-        <input type="button" value="BOOK A TABLE" />
+        <input type="button" class="button" value="BOOK A TABLE" />
         <ul class="slide-list">
-          <li class="slide-list__item">FAMILY GATHERING</li>
-          <li class="slide-list__item">SPECIAL EVENTS</li>
-          <li class="slide-list__item">SOCIAL EVENTS</li>
-          <img src="" alt="pattern" />
+          <li class="slide-list__item text">FAMILY GATHERING</li>
+          <li class="slide-list__item text">SPECIAL EVENTS</li>
+          <li class="slide-list__item text">SOCIAL EVENTS</li>
+          <img src="" alt="pattern" class="pattern" />
         </ul>
       </section>
       <section class="section">
         <div class="crop">
           <img src="" alt="Vegetable dish" />
         </div>
-        <h3>Ready to make a reservation?</h3>
-        <input type="button" value="BOOK A TABLE" />
+        <h3 class="text">Ready to make a reservation?</h3>
+        <input type="button" class="button" value="BOOK A TABLE" />
       </section>
     </main>
     <footer>
-      <h3>dine</h3>
+      <h3 class="text">dine</h3>
       <div>
-        <p>MARTHWAITE, SEDBERGH</p>
-        <p>OPEN TIMES</p>
-        <p>CUMBRIA</p>
-        <p>MON - FRI: 09:00 AM - 10:00 PM</p>
-        <p>+00 44 123 4567</p>
-        <p>SAT - SUN: 0900 AM - 11:30 PM</p>
+        <p class="text">MARTHWAITE, SEDBERGH</p>
+        <p class="text">OPEN TIMES</p>
+        <p class="text">CUMBRIA</p>
+        <p class="text">MON - FRI: 09:00 AM - 10:00 PM</p>
+        <p class="text">+00 44 123 4567</p>
+        <p class="text">SAT - SUN: 0900 AM - 11:30 PM</p>
       </div>
     </footer>
   </body>
