--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant Page</title>
   </head>
-  <body>
+  <body class="body">
     <main class="main">
       <section class="section">
         <h1 class="text">dine</h1>
@@ -118,7 +118,7 @@
         <input type="button" class="button" value="BOOK A TABLE" />
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <h3 class="text">dine</h3>
       <div>
         <p class="text">MARTHWAITE, SEDBERGH</p>
