Add images and set width/height

--- a/src/index.html
+++ b/src/index.html
@@ -18,19 +18,37 @@
         </div>
         <input type="button" class="button" value="BOOK A TABLE" />
         <div class="crop">
-          <img src="" alt="Seafood dish" />
+          <img
+            src="./assets/homepage/hero-bg-desktop@2x.jpg"
+            alt="Seafood dish"
+            height="400"
+          />
         </div>
       </section>
       <section class="section">
-        <img src="" alt="Farmland with a creek and hedgerows" />
-        <img src="" alt="pattern" class="pattern" />
+        <img
+          src="./assets/homepage/enjoyable-place-desktop@2x.jpg"
+          alt="Farmland with a creek and hedgerows"
+          height="400"
+        />
+        <img
+          src="./assets/patterns/pattern-curve-top-right.svg"
+          alt="pattern"
+          class="pattern"
+          height="200"
+        />
         <div class="text-group">
           <h3 class="text">Enjoyable place for all the family</h3>
           <p class="text">
             Our relaxed surroundings make dining with us a great experience for
             everyone. We can even arrange a tour of the farm before your meal.
           </p>
-          <img src="" alt="pattern" class="pattern" />
+          <img
+            src="./assets/patterns/pattern-divide.svg"
+            alt="pattern"
+            class="pattern"
+            width="50"
+          />
         </div>
       </section>
       <section class="section">
@@ -41,11 +59,30 @@
             you can be sure that you're eating the freshest, most sustainable
             food.
           </p>
-          <img src="" alt="pattern" class="pattern" />
+          <img
+            src="./assets/patterns/pattern-divide.svg"
+            alt="pattern"
+            class="pattern"
+            width="50"
+          />
         </div>
-        <img src="" alt="A chef preparing a dish" />
-        <img src="" alt="pattern" class="pattern" />
-        <img src="" alt="pattern" class="pattern" />
+        <img
+          src="./assets/homepage/locally-sourced-desktop@2x.jpg"
+          alt="A chef preparing a dish"
+          height="400"
+        />
+        <img
+          src="./assets/patterns/pattern-curve-top-left.svg"
+          alt="pattern"
+          class="pattern"
+          height="200"
+        />
+        <img
+          src="./assets/patterns/pattern-lines.svg"
+          alt="pattern"
+          class="pattern"
+          width="125"
+        />
       </section>
       <section class="section">
         <div class="text-group">
@@ -54,46 +91,92 @@
             We cater for all dietary requirements, but here's a glimpse at some
             of our diner's favourites. Our menu is revamped every season.
           </p>
-          <img src="" alt="pattern" class="pattern" />
+          <img
+            src="./assets/patterns/pattern-divide.svg"
+            alt="pattern"
+            class="pattern"
+            width="50"
+          />
         </div>
         <div>
-          <img src="" alt="Seared salmon fillet" />
+          <img
+            src="./assets/homepage/salmon-desktop-tablet@2x.jpg"
+            alt="Seared salmon fillet"
+            height="200"
+          />
           <div class="text-group">
             <h4 class="text">Seared Salmon fillet</h4>
             <p class="text">
               Our locally sourced salmon served with a refreshing buckwheat
               summer salad.
             </p>
-            <img src="" alt="pattern" class="pattern" />
+            <img
+              src="./assets/patterns/pattern-divide.svg"
+              alt="pattern"
+              class="pattern"
+              width="50"
+            />
           </div>
         </div>
         <div>
-          <img src="" alt="Rosemary filet mignon" />
+          <img
+            src="./assets/homepage/beef-desktop-tablet@2x.jpg"
+            alt="Rosemary filet mignon"
+            height="200"
+          />
           <div class="text-group">
             <h4 class="text">Rosemary Filet Mignon</h4>
             <p class="text">
               Our prime beef served to your taste with a delicious choice of
               seasonal sides.
             </p>
-            <img src="" alt="pattern" class="pattern" />
+            <img
+              src="./assets/patterns/pattern-divide.svg"
+              alt="pattern"
+              class="pattern"
+              width="50"
+            />
           </div>
         </div>
         <div>
-          <img src="" alt="Fruit chocolate mousse" />
+          <img
+            src="./assets/homepage/chocolate-desktop-tablet@2x.jpg"
+            alt="Fruit chocolate mousse"
+            height="200"
+          />
           <div class="text-group">
             <h4 class="text">Summer Fruit Chocolate Mousse</h4>
             <p class="text">
               Creamy mousse combined with summer fruits and dark chocolate
               shavings.
             </p>
-            <img src="" alt="pattern" class="pattern" />
+            <img
+              src="./assets/patterns/pattern-divide.svg"
+              alt="pattern"
+              class="pattern"
+              width="50"
+            />
           </div>
         </div>
       </section>
       <section class="section">
-        <img src="" alt="pattern" class="pattern" />
-        <img src="" alt="pattern" class="pattern" />
-        <img src="" alt="Family eating dinner at a large Table" />
+        <img
+          src="./assets/patterns/pattern-curve-top-right.svg"
+          alt="pattern"
+          class="pattern"
+          height="200"
+        />
+        <img
+          src="./assets/patterns/pattern-lines.svg"
+          alt="pattern"
+          class="pattern"
+          width="125"
+        />
+        <img
+          src="./assets/homepage/family-gathering-desktop@2x.jpg"
+          alt="Family eating dinner at a large Table"
+          height="300"
+        />
         <div class="text-group">
           <h3 class="text">Family Gathering</h3>
           <p class="text">
@@ -107,12 +190,21 @@
           <li class="slide-list__item text">FAMILY GATHERING</li>
           <li class="slide-list__item text">SPECIAL EVENTS</li>
           <li class="slide-list__item text">SOCIAL EVENTS</li>
-          <img src="" alt="pattern" class="pattern" />
+          <img
+            src="./assets/patterns/pattern-divide.svg"
+            alt="pattern"
+            class="pattern"
+            width="50"
+          />
         </ul>
       </section>
       <section class="section">
         <div class="crop">
-          <img src="" alt="Vegetable dish" />
+          <img
+            src="./assets/homepage/ready-bg-desktop@2x.jpg"
+            alt="Vegetable dish"
+            height="200"
+          />
         </div>
         <h3 class="text">Ready to make a reservation?</h3>
         <input type="button" class="button" value="BOOK A TABLE" />
