--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <body class="body">
     <main class="main">
       <section class="section">
-        <h1 class="text">dine</h1>
+        <img src="./assets/logo.svg" alt="logo" height="50" />
         <div class="text-group">
           <h2 class="text">Exquisite dining since 1989</h2>
           <p class="text">
@@ -211,7 +211,7 @@
       </section>
     </main>
     <footer class="footer">
-      <h3 class="text">dine</h3>
+      <img src="./assets/logo.svg" alt="logo" height="50" />
       <div>
         <p class="text">MARTHWAITE, SEDBERGH</p>
         <p class="text">OPEN TIMES</p>
