Make dark sections and footer black

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="body">
     <main class="main">
-      <section class="section">
+      <section class="section section_dark">
         <img src="./assets/logo.svg" alt="logo" height="50" />
         <div class="text-group">
           <h1 class="text">Exquisite dining since 1989</h1>
@@ -84,7 +84,7 @@
           width="125"
         />
       </section>
-      <section class="section">
+      <section class="section section_dark">
         <div class="text-group">
           <h2 class="text">A few highlights from our menu</h2>
           <p class="text">
