--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,13 @@
       <section class="section section_dark">
         <img src="./assets/logo.svg" alt="logo" height="50" />
         <div class="text-group">
-          <h1 class="text">Exquisite dining since 1989</h1>
-          <p class="text">
+          <h1 class="text text_white">Exquisite dining since 1989</h1>
+          <p class="text text_white">
             Experience our seasonal menu in beautiful country surroundings. Eat
             the freshest produce from the cofmoft of our farmhouse.
           </p>
         </div>
-        <input type="button" class="button" value="BOOK A TABLE" />
+        <input type="button" class="button button_white" value="BOOK A TABLE" />
         <div class="crop">
           <img
             src="./assets/homepage/hero-bg-desktop@2x.jpg"
@@ -86,8 +86,8 @@
       </section>
       <section class="section section_dark">
         <div class="text-group">
-          <h2 class="text">A few highlights from our menu</h2>
-          <p class="text">
+          <h2 class="text text_white">A few highlights from our menu</h2>
+          <p class="text text_white">
             We cater for all dietary requirements, but here's a glimpse at some
             of our diner's favourites. Our menu is revamped every season.
           </p>
@@ -105,8 +105,8 @@
             height="200"
           />
           <div class="text-group">
-            <h3 class="text">Seared Salmon fillet</h3>
-            <p class="text">
+            <h3 class="text text_white">Seared Salmon fillet</h3>
+            <p class="text text_white">
               Our locally sourced salmon served with a refreshing buckwheat
               summer salad.
             </p>
@@ -125,8 +125,8 @@
             height="200"
           />
           <div class="text-group">
-            <h3 class="text">Rosemary Filet Mignon</h3>
-            <p class="text">
+            <h3 class="text text_white">Rosemary Filet Mignon</h3>
+            <p class="text text_white">
               Our prime beef served to your taste with a delicious choice of
               seasonal sides.
             </p>
@@ -145,8 +145,8 @@
             height="200"
           />
           <div class="text-group">
-            <h3 class="text">Summer Fruit Chocolate Mousse</h3>
-            <p class="text">
+            <h3 class="text text_white">Summer Fruit Chocolate Mousse</h3>
+            <p class="text text_white">
               Creamy mousse combined with summer fruits and dark chocolate
               shavings.
             </p>
@@ -207,18 +207,18 @@
           />
         </div>
         <h2 class="text">Ready to make a reservation?</h2>
-        <input type="button" class="button" value="BOOK A TABLE" />
+        <input type="button" class="button button_white" value="BOOK A TABLE" />
       </section>
     </main>
     <footer class="footer">
       <img src="./assets/logo.svg" alt="logo" height="50" />
       <div>
-        <p class="text">MARTHWAITE, SEDBERGH</p>
-        <p class="text">OPEN TIMES</p>
-        <p class="text">CUMBRIA</p>
-        <p class="text">MON - FRI: 09:00 AM - 10:00 PM</p>
-        <p class="text">+00 44 123 4567</p>
-        <p class="text">SAT - SUN: 0900 AM - 11:30 PM</p>
+        <p class="text text_white">MARTHWAITE, SEDBERGH</p>
+        <p class="text text_white">OPEN TIMES</p>
+        <p class="text text_white">CUMBRIA</p>
+        <p class="text text_white">MON - FRI: 09:00 AM - 10:00 PM</p>
+        <p class="text text_white">+00 44 123 4567</p>
+        <p class="text text_white">SAT - SUN: 0900 AM - 11:30 PM</p>
       </div>
     </footer>
   </body>
