--- a/src/index.html
+++ b/src/index.html
@@ -7,28 +7,36 @@
   </head>
   <body class="body">
     <main class="main">
-      <section class="section section_dark">
-        <img src="./assets/logo.svg" alt="logo" height="50" />
-        <div class="text-group">
-          <h1 class="text text_white">Exquisite dining since 1989</h1>
-          <p class="text text_white">
+      <section class="section section_dark hero">
+        <img src="./assets/logo.svg" alt="logo" class="logo" height="30" />
+        <div class="crop crop_variant_one">
+          <img
+            src="./assets/homepage/hero-bg-desktop@2x.jpg"
+            alt="Seafood dish"
+            class="image image_background image_hero"
+            height="400"
+          />
+        </div>
+        <div class="text-group hero__text-group">
+          <h1 class="text-group__header text text_white text_size_large">
+            Exquisite dining since 1989
+          </h1>
+          <p class="text text_white text-group__paragraph">
             Experience our seasonal menu in beautiful country surroundings. Eat
             the freshest produce from the cofmoft of our farmhouse.
           </p>
         </div>
-        <input type="button" class="button button_white" value="BOOK A TABLE" />
-        <div class="crop">
-          <img
-            src="./assets/homepage/hero-bg-desktop@2x.jpg"
-            alt="Seafood dish"
-            height="400"
-          />
-        </div>
+        <input
+          type="button"
+          class="button button_white hero__button"
+          value="BOOK A TABLE"
+        />
       </section>
-      <section class="section">
+      <section class="section enjoyable-place">
         <img
           src="./assets/homepage/enjoyable-place-desktop@2x.jpg"
           alt="Farmland with a creek and hedgerows"
+          class="image image_foreground"
           height="400"
         />
         <img
@@ -38,8 +46,10 @@
           height="200"
         />
         <div class="text-group">
-          <h2 class="text">Enjoyable place for all the family</h2>
-          <p class="text">
+          <h2 class="text-group__header text">
+            Enjoyable place for all the family
+          </h2>
+          <p class="text-group__paragraph text">
             Our relaxed surroundings make dining with us a great experience for
             everyone. We can even arrange a tour of the farm before your meal.
           </p>
@@ -51,10 +61,10 @@
           />
         </div>
       </section>
-      <section class="section">
+      <section class="section locally-sourced">
         <div class="text-group">
-          <h2 class="text">The most locally sourced food</h2>
-          <p class="text">
+          <h2 class="text-group__header text">The most locally sourced food</h2>
+          <p class="text-group__paragraph text">
             All our ingredients come directly from our farm or local fishery. So
             you can be sure that you're eating the freshest, most sustainable
             food.
@@ -69,6 +79,7 @@
         <img
           src="./assets/homepage/locally-sourced-desktop@2x.jpg"
           alt="A chef preparing a dish"
+          class="image image_foreground"
           height="400"
         />
         <img
@@ -84,10 +95,12 @@
           width="125"
         />
       </section>
-      <section class="section section_dark">
+      <section class="section section_dark highlights">
         <div class="text-group">
-          <h2 class="text text_white">A few highlights from our menu</h2>
-          <p class="text text_white">
+          <h2 class="text-group__header text text_white">
+            A few highlights from our menu
+          </h2>
+          <p class="text text_white text-group__paragraph">
             We cater for all dietary requirements, but here's a glimpse at some
             of our diner's favourites. Our menu is revamped every season.
           </p>
@@ -102,11 +115,14 @@
           <img
             src="./assets/homepage/salmon-desktop-tablet@2x.jpg"
             alt="Seared salmon fillet"
+            class="image"
             height="200"
           />
           <div class="text-group">
-            <h3 class="text text_white">Seared Salmon fillet</h3>
-            <p class="text text_white">
+            <h3 class="text-group__header text text_white">
+              Seared Salmon fillet
+            </h3>
+            <p class="text text_white text-group__paragraph">
               Our locally sourced salmon served with a refreshing buckwheat
               summer salad.
             </p>
@@ -122,11 +138,14 @@
           <img
             src="./assets/homepage/beef-desktop-tablet@2x.jpg"
             alt="Rosemary filet mignon"
+            class="image"
             height="200"
           />
           <div class="text-group">
-            <h3 class="text text_white">Rosemary Filet Mignon</h3>
-            <p class="text text_white">
+            <h3 class="text-group__header text text_white">
+              Rosemary Filet Mignon
+            </h3>
+            <p class="text text_white text-group__paragraph">
               Our prime beef served to your taste with a delicious choice of
               seasonal sides.
             </p>
@@ -142,11 +161,14 @@
           <img
             src="./assets/homepage/chocolate-desktop-tablet@2x.jpg"
             alt="Fruit chocolate mousse"
+            class="image"
             height="200"
           />
           <div class="text-group">
-            <h3 class="text text_white">Summer Fruit Chocolate Mousse</h3>
-            <p class="text text_white">
+            <h3 class="text-group__header text text_white">
+              Summer Fruit Chocolate Mousse
+            </h3>
+            <p class="text text_white text-group__paragraph">
               Creamy mousse combined with summer fruits and dark chocolate
               shavings.
             </p>
@@ -159,7 +181,7 @@
           </div>
         </div>
       </section>
-      <section class="section">
+      <section class="section family-gathering">
         <img
           src="./assets/patterns/pattern-curve-top-right.svg"
           alt="pattern"
@@ -175,11 +197,12 @@
         <img
           src="./assets/homepage/family-gathering-desktop@2x.jpg"
           alt="Family eating dinner at a large Table"
+          class="image"
           height="300"
         />
         <div class="text-group">
-          <h2 class="text">Family Gathering</h2>
-          <p class="text">
+          <h2 class="text-group__header text">Family Gathering</h2>
+          <p class="text-group__paragraph text">
             We love catering for entire families. So please bring everyone along
             for a special meal with your loved ones. We'll provide a memorable
             experience for all.
@@ -198,20 +221,19 @@
           />
         </ul>
       </section>
-      <section class="section">
-        <div class="crop">
-          <img
-            src="./assets/homepage/ready-bg-desktop@2x.jpg"
-            alt="Vegetable dish"
-            height="200"
-          />
-        </div>
+      <section class="section cta">
+        <img
+          src="./assets/homepage/ready-bg-desktop@2x.jpg"
+          alt="Vegetable dish"
+          class="image image_background"
+          height="200"
+        />
         <h2 class="text">Ready to make a reservation?</h2>
         <input type="button" class="button button_white" value="BOOK A TABLE" />
       </section>
     </main>
-    <footer class="footer">
-      <img src="./assets/logo.svg" alt="logo" height="50" />
+    <footer class="section section_dark footer">
+      <img src="./assets/logo.svg" alt="logo" class="logo" height="30" />
       <div>
         <p class="text text_white">MARTHWAITE, SEDBERGH</p>
         <p class="text text_white">OPEN TIMES</p>
