--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,10 @@
           />
         </div>
         <div class="text-group hero__text-group">
-          <h1 class="text-group__header text text_white text_size_large">
+          <h1 class="text text_white text_heading_xl">
             Exquisite dining since 1989
           </h1>
-          <p class="text text_white text-group__paragraph">
+          <p class="text text_white text_body_1">
             Experience our seasonal menu in beautiful country surroundings. Eat
             the freshest produce from the cofmoft of our farmhouse.
           </p>
@@ -46,10 +46,10 @@
           height="200"
         />
         <div class="text-group">
-          <h2 class="text-group__header text">
+          <h2 class="text text_heading_l">
             Enjoyable place for all the family
           </h2>
-          <p class="text-group__paragraph text">
+          <p class="text text_body_1">
             Our relaxed surroundings make dining with us a great experience for
             everyone. We can even arrange a tour of the farm before your meal.
           </p>
@@ -63,8 +63,8 @@
       </section>
       <section class="section locally-sourced">
         <div class="text-group">
-          <h2 class="text-group__header text">The most locally sourced food</h2>
-          <p class="text-group__paragraph text">
+          <h2 class="text text_heading_l">The most locally sourced food</h2>
+          <p class="text text_body_1">
             All our ingredients come directly from our farm or local fishery. So
             you can be sure that you're eating the freshest, most sustainable
             food.
@@ -97,10 +97,10 @@
       </section>
       <section class="section section_dark highlights">
         <div class="text-group">
-          <h2 class="text-group__header text text_white">
+          <h2 class="text text_white text_heading_l">
             A few highlights from our menu
           </h2>
-          <p class="text text_white text-group__paragraph">
+          <p class="text text_white text_body_1">
             We cater for all dietary requirements, but here's a glimpse at some
             of our diner's favourites. Our menu is revamped every season.
           </p>
@@ -119,10 +119,8 @@
             height="200"
           />
           <div class="text-group">
-            <h3 class="text-group__header text text_white">
-              Seared Salmon fillet
-            </h3>
-            <p class="text text_white text-group__paragraph">
+            <h3 class="text text_white text_heading_m">Seared Salmon fillet</h3>
+            <p class="text text_white text_body_2">
               Our locally sourced salmon served with a refreshing buckwheat
               summer salad.
             </p>
@@ -142,10 +140,10 @@
             height="200"
           />
           <div class="text-group">
-            <h3 class="text-group__header text text_white">
+            <h3 class="text text_white text_heading_m">
               Rosemary Filet Mignon
             </h3>
-            <p class="text text_white text-group__paragraph">
+            <p class="text text_white text_body_2">
               Our prime beef served to your taste with a delicious choice of
               seasonal sides.
             </p>
@@ -165,10 +163,10 @@
             height="200"
           />
           <div class="text-group">
-            <h3 class="text-group__header text text_white">
+            <h3 class="text text_white text_heading_m">
               Summer Fruit Chocolate Mousse
             </h3>
-            <p class="text text_white text-group__paragraph">
+            <p class="text text_white text_body_2">
               Creamy mousse combined with summer fruits and dark chocolate
               shavings.
             </p>
@@ -201,8 +199,8 @@
           height="300"
         />
         <div class="text-group">
-          <h2 class="text-group__header text">Family Gathering</h2>
-          <p class="text-group__paragraph text">
+          <h2 class="text text_heading_l">Family Gathering</h2>
+          <p class="text text_body_1">
             We love catering for entire families. So please bring everyone along
             for a special meal with your loved ones. We'll provide a memorable
             experience for all.
@@ -210,9 +208,9 @@
         </div>
         <input type="button" class="button" value="BOOK A TABLE" />
         <ul class="slide-list">
-          <li class="slide-list__item text">FAMILY GATHERING</li>
-          <li class="slide-list__item text">SPECIAL EVENTS</li>
-          <li class="slide-list__item text">SOCIAL EVENTS</li>
+          <li class="slide-list__item text text_heading_s">FAMILY GATHERING</li>
+          <li class="slide-list__item text text_heading_s">SPECIAL EVENTS</li>
+          <li class="slide-list__item text text_heading_s">SOCIAL EVENTS</li>
           <img
             src="./assets/patterns/pattern-divide.svg"
             alt="pattern"
@@ -228,19 +226,23 @@
           class="image image_background"
           height="200"
         />
-        <h2 class="text">Ready to make a reservation?</h2>
+        <h2 class="text text_heading_l">Ready to make a reservation?</h2>
         <input type="button" class="button button_white" value="BOOK A TABLE" />
       </section>
     </main>
     <footer class="section section_dark footer">
       <img src="./assets/logo.svg" alt="logo" class="logo" height="30" />
       <div>
-        <p class="text text_white">MARTHWAITE, SEDBERGH</p>
-        <p class="text text_white">OPEN TIMES</p>
-        <p class="text text_white">CUMBRIA</p>
-        <p class="text text_white">MON - FRI: 09:00 AM - 10:00 PM</p>
-        <p class="text text_white">+00 44 123 4567</p>
-        <p class="text text_white">SAT - SUN: 0900 AM - 11:30 PM</p>
+        <p class="text text_white footer__text">MARTHWAITE, SEDBERGH</p>
+        <p class="text text_white footer__text">OPEN TIMES</p>
+        <p class="text text_white footer__text">CUMBRIA</p>
+        <p class="text text_white footer__text">
+          MON - FRI: 09:00 AM - 10:00 PM
+        </p>
+        <p class="text text_white footer__text">+00 44 123 4567</p>
+        <p class="text text_white footer__text">
+          SAT - SUN: 0900 AM - 11:30 PM
+        </p>
       </div>
     </footer>
   </body>
