Style the hero section

--- a/src/index.html
+++ b/src/index.html
@@ -13,22 +13,22 @@
           <img
             src="./assets/homepage/hero-bg-desktop@2x.jpg"
             alt="Seafood dish"
-            class="image image_background image_hero"
+            class="image image_background hero__image"
             height="400"
           />
         </div>
         <div class="text-group hero__text-group">
-          <h1 class="text text_white text_heading_xl">
+          <h1 class="text text_white text_heading_xl hero__heading">
             Exquisite dining since 1989
           </h1>
-          <p class="text text_white text_body_1">
+          <p class="text text_white text_body_1 hero__body">
             Experience our seasonal menu in beautiful country surroundings. Eat
             the freshest produce from the cofmoft of our farmhouse.
           </p>
         </div>
         <input
           type="button"
-          class="button button_white hero__button"
+          class="button button_white text_heading_s hero__button"
           value="BOOK A TABLE"
         />
       </section>
@@ -206,7 +206,11 @@
             experience for all.
           </p>
         </div>
-        <input type="button" class="button" value="BOOK A TABLE" />
+        <input
+          type="button"
+          class="button text_heading_s"
+          value="BOOK A TABLE"
+        />
         <ul class="slide-list">
           <li class="slide-list__item text text_heading_s">FAMILY GATHERING</li>
           <li class="slide-list__item text text_heading_s">SPECIAL EVENTS</li>
@@ -227,7 +231,11 @@
           height="200"
         />
         <h2 class="text text_heading_l">Ready to make a reservation?</h2>
-        <input type="button" class="button button_white" value="BOOK A TABLE" />
+        <input
+          type="button"
+          class="button button_white text_heading_s"
+          value="BOOK A TABLE"
+        />
       </section>
     </main>
     <footer class="section section_dark footer">
