Style the "enjoyable-place" section

--- a/src/index.html
+++ b/src/index.html
@@ -33,48 +33,50 @@
         />
       </section>
       <section class="section enjoyable-place">
-        <img
-          src="./assets/homepage/enjoyable-place-desktop@2x.jpg"
-          alt="Farmland with a creek and hedgerows"
-          class="image image_foreground"
-          height="400"
-        />
+        <div class="crop crop_variant_two">
+          <img
+            src="./assets/homepage/enjoyable-place-desktop@2x.jpg"
+            alt="Farmland with a creek and hedgerows"
+            class="image image_foreground enjoyable-place__image"
+            height="400"
+          />
+        </div>
         <img
           src="./assets/patterns/pattern-curve-top-right.svg"
           alt="pattern"
-          class="pattern"
+          class="pattern enjoyable-place__top-right-pattern"
           height="200"
         />
-        <div class="text-group">
-          <h2 class="text text_heading_l">
+        <div class="text-group enjoyable-place__text-group">
+          <img
+            src="./assets/patterns/pattern-divide.svg"
+            alt="pattern"
+            class="pattern enjoyable-place__divide-pattern"
+            width="50"
+          />
+          <h2 class="text text_heading_l enjoyable-place__heading">
             Enjoyable place for all the family
           </h2>
-          <p class="text text_body_1">
+          <p class="text text_body_1 enjoyable-place__body">
             Our relaxed surroundings make dining with us a great experience for
             everyone. We can even arrange a tour of the farm before your meal.
           </p>
+        </div>
+      </section>
+      <section class="section locally-sourced">
+        <div class="text-group locally-sourced__text-group">
           <img
             src="./assets/patterns/pattern-divide.svg"
             alt="pattern"
             class="pattern"
             width="50"
           />
-        </div>
-      </section>
-      <section class="section locally-sourced">
-        <div class="text-group">
           <h2 class="text text_heading_l">The most locally sourced food</h2>
           <p class="text text_body_1">
             All our ingredients come directly from our farm or local fishery. So
             you can be sure that you're eating the freshest, most sustainable
             food.
           </p>
-          <img
-            src="./assets/patterns/pattern-divide.svg"
-            alt="pattern"
-            class="pattern"
-            width="50"
-          />
         </div>
         <img
           src="./assets/homepage/locally-sourced-desktop@2x.jpg"
@@ -97,6 +99,12 @@
       </section>
       <section class="section section_dark highlights">
         <div class="text-group">
+          <img
+            src="./assets/patterns/pattern-divide.svg"
+            alt="pattern"
+            class="pattern"
+            width="50"
+          />
           <h2 class="text text_white text_heading_l">
             A few highlights from our menu
           </h2>
@@ -104,12 +112,6 @@
             We cater for all dietary requirements, but here's a glimpse at some
             of our diner's favourites. Our menu is revamped every season.
           </p>
-          <img
-            src="./assets/patterns/pattern-divide.svg"
-            alt="pattern"
-            class="pattern"
-            width="50"
-          />
         </div>
         <div>
           <img
