Style the "locally-sourced" section

--- a/src/index.html
+++ b/src/index.html
@@ -68,32 +68,36 @@
           <img
             src="./assets/patterns/pattern-divide.svg"
             alt="pattern"
-            class="pattern"
+            class="pattern locally-sourced__divide-pattern"
             width="50"
           />
-          <h2 class="text text_heading_l">The most locally sourced food</h2>
-          <p class="text text_body_1">
+          <h2 class="text text_heading_l locally-sourced__heading">
+            The most locally sourced food
+          </h2>
+          <p class="text text_body_1 locally-sourced__body">
             All our ingredients come directly from our farm or local fishery. So
             you can be sure that you're eating the freshest, most sustainable
             food.
           </p>
         </div>
-        <img
-          src="./assets/homepage/locally-sourced-desktop@2x.jpg"
-          alt="A chef preparing a dish"
-          class="image image_foreground"
-          height="400"
-        />
+        <div class="crop crop_variant_three">
+          <img
+            src="./assets/homepage/locally-sourced-desktop@2x.jpg"
+            alt="A chef preparing a dish"
+            class="image image_foreground locally-sourced__image"
+            height="400"
+          />
+        </div>
         <img
           src="./assets/patterns/pattern-curve-top-left.svg"
           alt="pattern"
-          class="pattern"
+          class="pattern locally-sourced__top-left-pattern"
           height="200"
         />
         <img
           src="./assets/patterns/pattern-lines.svg"
           alt="pattern"
-          class="pattern"
+          class="pattern locally-sourced__lines-pattern"
           width="125"
         />
       </section>
