--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,13 @@
             height="400"
           />
         </div>
-        <div class="text-group hero__text-group">
-          <h1 class="text text_white text_heading_xl hero__heading">
+        <div class="text-group text-group_size_hero hero__text-group">
+          <h1 class="text text_white text_heading_xl text-group__heading">
             Exquisite dining since 1989
           </h1>
-          <p class="text text_white text_body_1 hero__body">
+          <p class="text text_white text_body_1 text-group__body">
             Experience our seasonal menu in beautiful country surroundings. Eat
-            the freshest produce from the cofmoft of our farmhouse.
+            the freshest produce from the comfort of our farmhouse.
           </p>
         </div>
         <input
@@ -47,34 +47,38 @@
           class="pattern enjoyable-place__top-right-pattern"
           height="200"
         />
-        <div class="text-group enjoyable-place__text-group">
+        <div
+          class="text-group text-group_size_regular enjoyable-place__text-group"
+        >
           <img
             src="./assets/patterns/pattern-divide.svg"
             alt="pattern"
-            class="pattern enjoyable-place__divide-pattern"
+            class="pattern text-group__divide-pattern"
             width="50"
           />
-          <h2 class="text text_heading_l enjoyable-place__heading">
+          <h2 class="text text_heading_l text-group__heading">
             Enjoyable place for all the family
           </h2>
-          <p class="text text_body_1 enjoyable-place__body">
+          <p class="text text_body_1 text-group__body">
             Our relaxed surroundings make dining with us a great experience for
             everyone. We can even arrange a tour of the farm before your meal.
           </p>
         </div>
       </section>
       <section class="section locally-sourced">
-        <div class="text-group locally-sourced__text-group">
+        <div
+          class="text-group text-group_size_regular locally-sourced__text-group"
+        >
           <img
             src="./assets/patterns/pattern-divide.svg"
             alt="pattern"
-            class="pattern locally-sourced__divide-pattern"
+            class="pattern text-group__divide-pattern"
             width="50"
           />
-          <h2 class="text text_heading_l locally-sourced__heading">
+          <h2 class="text text_heading_l text-group__heading">
             The most locally sourced food
           </h2>
-          <p class="text text_body_1 locally-sourced__body">
+          <p class="text text_body_1 text-group__body">
             All our ingredients come directly from our farm or local fishery. So
             you can be sure that you're eating the freshest, most sustainable
             food.
@@ -102,17 +106,17 @@
         />
       </section>
       <section class="section section_dark highlights">
-        <div class="text-group">
+        <div class="text-group text-group_size_large highlights__text-group">
           <img
             src="./assets/patterns/pattern-divide.svg"
             alt="pattern"
-            class="pattern"
+            class="pattern text-group__divide-pattern"
             width="50"
           />
-          <h2 class="text text_white text_heading_l">
+          <h2 class="text text_white text_heading_l text-group__heading">
             A few highlights from our menu
           </h2>
-          <p class="text text_white text_body_1">
+          <p class="text text_white text_body_1 text-group__body">
             We cater for all dietary requirements, but here's a glimpse at some
             of our diner's favourites. Our menu is revamped every season.
           </p>
@@ -124,18 +128,15 @@
             class="image"
             height="200"
           />
-          <div class="text-group">
-            <h3 class="text text_white text_heading_m">Seared Salmon fillet</h3>
-            <p class="text text_white text_body_2">
+          <div class="text-group text-group_size_small">
+            <h3 class="text text_white text_heading_m text-group__heading">
+              Seared Salmon fillet
+            </h3>
+            <p class="text text_white text_body_2 text-group__body">
               Our locally sourced salmon served with a refreshing buckwheat
               summer salad.
             </p>
-            <img
-              src="./assets/patterns/pattern-divide.svg"
-              alt="pattern"
-              class="pattern"
-              width="50"
-            />
+            <div class="pattern highlights__line-pattern"></div>
           </div>
         </div>
         <div>
@@ -145,20 +146,15 @@
             class="image"
             height="200"
           />
-          <div class="text-group">
-            <h3 class="text text_white text_heading_m">
+          <div class="text-group text-group_size_small">
+            <h3 class="text text_white text_heading_m text-group__heading">
               Rosemary Filet Mignon
             </h3>
-            <p class="text text_white text_body_2">
+            <p class="text text_white text_body_2 text-group__body">
               Our prime beef served to your taste with a delicious choice of
               seasonal sides.
             </p>
-            <img
-              src="./assets/patterns/pattern-divide.svg"
-              alt="pattern"
-              class="pattern"
-              width="50"
-            />
+            <div class="pattern highlights__line-pattern"></div>
           </div>
         </div>
         <div>
@@ -168,20 +164,15 @@
             class="image"
             height="200"
           />
-          <div class="text-group">
-            <h3 class="text text_white text_heading_m">
+          <div class="text-group text-group_size_small">
+            <h3 class="text text_white text_heading_m text-group__heading">
               Summer Fruit Chocolate Mousse
             </h3>
-            <p class="text text_white text_body_2">
+            <p class="text text_white text_body_2 text-group__body">
               Creamy mousse combined with summer fruits and dark chocolate
               shavings.
             </p>
-            <img
-              src="./assets/patterns/pattern-divide.svg"
-              alt="pattern"
-              class="pattern"
-              width="50"
-            />
+            <div class="pattern highlights__line-pattern"></div>
           </div>
         </div>
       </section>
@@ -204,9 +195,13 @@
           class="image"
           height="300"
         />
-        <div class="text-group">
-          <h2 class="text text_heading_l">Family Gathering</h2>
-          <p class="text text_body_1">
+        <div
+          class="text-group text-group_size_regular family-gathering__text-group"
+        >
+          <h2 class="text text_heading_l text-group__heading">
+            Family Gathering
+          </h2>
+          <p class="text text_body_1 text-group__body">
             We love catering for entire families. So please bring everyone along
             for a special meal with your loved ones. We'll provide a memorable
             experience for all.
