--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
     <main class="main">
       <section class="section section_dark hero">
         <img src="./assets/logo.svg" alt="logo" class="logo" height="30" />
-        <div class="crop crop_variant_one">
+        <div class="crop hero__crop">
           <img
             src="./assets/homepage/hero-bg-desktop@2x.jpg"
             alt="Seafood dish"
-            class="image image_background hero__image"
+            class="hero__image"
             height="400"
           />
         </div>
@@ -33,18 +33,18 @@
         />
       </section>
       <section class="section enjoyable-place">
-        <div class="crop crop_variant_two">
+        <div class="crop enjoyable-place__crop">
           <img
             src="./assets/homepage/enjoyable-place-desktop@2x.jpg"
             alt="Farmland with a creek and hedgerows"
-            class="image image_foreground enjoyable-place__image"
+            class="enjoyable-place__image"
             height="400"
           />
         </div>
         <img
           src="./assets/patterns/pattern-curve-top-right.svg"
           alt="pattern"
-          class="pattern enjoyable-place__top-right-pattern"
+          class="enjoyable-place__top-right-pattern"
           height="200"
         />
         <div
@@ -53,7 +53,7 @@
           <img
             src="./assets/patterns/pattern-divide.svg"
             alt="pattern"
-            class="pattern text-group__divide-pattern"
+            class="text-group__divide-pattern"
             width="50"
           />
           <h2 class="text text_heading_l text-group__heading">
@@ -72,7 +72,7 @@
           <img
             src="./assets/patterns/pattern-divide.svg"
             alt="pattern"
-            class="pattern text-group__divide-pattern"
+            class="text-group__divide-pattern"
             width="50"
           />
           <h2 class="text text_heading_l text-group__heading">
@@ -84,24 +84,24 @@
             food.
           </p>
         </div>
-        <div class="crop crop_variant_three">
+        <div class="crop locally-sourced__crop">
           <img
             src="./assets/homepage/locally-sourced-desktop@2x.jpg"
             alt="A chef preparing a dish"
-            class="image image_foreground locally-sourced__image"
+            class="locally-sourced__image"
             height="400"
           />
         </div>
         <img
           src="./assets/patterns/pattern-curve-top-left.svg"
           alt="pattern"
-          class="pattern locally-sourced__top-left-pattern"
+          class="locally-sourced__top-left-pattern"
           height="200"
         />
         <img
           src="./assets/patterns/pattern-lines.svg"
           alt="pattern"
-          class="pattern locally-sourced__lines-pattern"
+          class="locally-sourced__lines-pattern"
           width="125"
         />
       </section>
@@ -110,7 +110,7 @@
           <img
             src="./assets/patterns/pattern-divide.svg"
             alt="pattern"
-            class="pattern text-group__divide-pattern"
+            class="text-group__divide-pattern"
             width="50"
           />
           <h2 class="text text_white text_heading_l text-group__heading">
@@ -125,7 +125,7 @@
           <img
             src="./assets/homepage/salmon-desktop-tablet@2x.jpg"
             alt="Seared salmon fillet"
-            class="image"
+            class=""
             height="200"
           />
           <div class="text-group text-group_size_small">
@@ -136,14 +136,14 @@
               Our locally sourced salmon served with a refreshing buckwheat
               summer salad.
             </p>
-            <div class="pattern highlights__line-pattern"></div>
+            <div class="highlights__line-pattern"></div>
           </div>
         </div>
         <div>
           <img
             src="./assets/homepage/beef-desktop-tablet@2x.jpg"
             alt="Rosemary filet mignon"
-            class="image"
+            class=""
             height="200"
           />
           <div class="text-group text-group_size_small">
@@ -154,14 +154,14 @@
               Our prime beef served to your taste with a delicious choice of
               seasonal sides.
             </p>
-            <div class="pattern highlights__line-pattern"></div>
+            <div class="highlights__line-pattern"></div>
           </div>
         </div>
         <div>
           <img
             src="./assets/homepage/chocolate-desktop-tablet@2x.jpg"
             alt="Fruit chocolate mousse"
-            class="image"
+            class=""
             height="200"
           />
           <div class="text-group text-group_size_small">
@@ -172,7 +172,7 @@
               Creamy mousse combined with summer fruits and dark chocolate
               shavings.
             </p>
-            <div class="pattern highlights__line-pattern"></div>
+            <div class="highlights__line-pattern"></div>
           </div>
         </div>
       </section>
@@ -180,19 +180,19 @@
         <img
           src="./assets/patterns/pattern-curve-top-right.svg"
           alt="pattern"
-          class="pattern"
+          class=""
           height="200"
         />
         <img
           src="./assets/patterns/pattern-lines.svg"
           alt="pattern"
-          class="pattern"
+          class=""
           width="125"
         />
         <img
           src="./assets/homepage/family-gathering-desktop@2x.jpg"
           alt="Family eating dinner at a large Table"
-          class="image"
+          class=""
           height="300"
         />
         <div
@@ -219,7 +219,7 @@
           <img
             src="./assets/patterns/pattern-divide.svg"
             alt="pattern"
-            class="pattern"
+            class=""
             width="50"
           />
         </ul>
@@ -228,7 +228,7 @@
         <img
           src="./assets/homepage/ready-bg-desktop@2x.jpg"
           alt="Vegetable dish"
-          class="image image_background"
+          class=""
           height="200"
         />
         <h2 class="text text_heading_l">Ready to make a reservation?</h2>
