Style "highlights" section

--- a/src/index.html
+++ b/src/index.html
@@ -121,58 +121,68 @@
             of our diner's favourites. Our menu is revamped every season.
           </p>
         </div>
-        <div>
-          <img
-            src="./assets/homepage/salmon-desktop-tablet@2x.jpg"
-            alt="Seared salmon fillet"
-            class=""
-            height="200"
-          />
-          <div class="text-group text-group_size_small">
-            <h3 class="text text_white text_heading_m text-group__heading">
-              Seared Salmon fillet
-            </h3>
-            <p class="text text_white text_body_2 text-group__body">
-              Our locally sourced salmon served with a refreshing buckwheat
-              summer salad.
-            </p>
-            <div class="highlights__line-pattern"></div>
+        <div class="highlights__list">
+          <div class="highlights__item">
+            <img
+              src="./assets/homepage/salmon-desktop-tablet@2x.jpg"
+              alt="Seared salmon fillet"
+              class="highlights__image"
+              height="200"
+            />
+            <div class="text-group text-group_size_small">
+              <h3
+                class="text text_white text_heading_m text-group__heading highlights__item-heading"
+              >
+                <div class="highlights__line-pattern"></div>
+                Seared Salmon fillet
+              </h3>
+              <p class="text text_white text_body_2 text-group__body">
+                Our locally sourced salmon served with a refreshing buckwheat
+                summer salad.
+              </p>
+            </div>
           </div>
-        </div>
-        <div>
-          <img
-            src="./assets/homepage/beef-desktop-tablet@2x.jpg"
-            alt="Rosemary filet mignon"
-            class=""
-            height="200"
-          />
-          <div class="text-group text-group_size_small">
-            <h3 class="text text_white text_heading_m text-group__heading">
-              Rosemary Filet Mignon
-            </h3>
-            <p class="text text_white text_body_2 text-group__body">
-              Our prime beef served to your taste with a delicious choice of
-              seasonal sides.
-            </p>
-            <div class="highlights__line-pattern"></div>
+          <div class="highlights__list-divider"></div>
+          <div class="highlights__item">
+            <img
+              src="./assets/homepage/beef-desktop-tablet@2x.jpg"
+              alt="Rosemary filet mignon"
+              class="highlights__image"
+              height="200"
+            />
+            <div class="text-group text-group_size_small">
+              <h3
+                class="text text_white text_heading_m text-group__heading highlights__item-heading"
+              >
+                <div class="highlights__line-pattern"></div>
+                Rosemary Filet Mignon
+              </h3>
+              <p class="text text_white text_body_2 text-group__body">
+                Our prime beef served to your taste with a delicious choice of
+                seasonal sides.
+              </p>
+            </div>
           </div>
-        </div>
-        <div>
-          <img
-            src="./assets/homepage/chocolate-desktop-tablet@2x.jpg"
-            alt="Fruit chocolate mousse"
-            class=""
-            height="200"
-          />
-          <div class="text-group text-group_size_small">
-            <h3 class="text text_white text_heading_m text-group__heading">
-              Summer Fruit Chocolate Mousse
-            </h3>
-            <p class="text text_white text_body_2 text-group__body">
-              Creamy mousse combined with summer fruits and dark chocolate
-              shavings.
-            </p>
-            <div class="highlights__line-pattern"></div>
+          <div class="highlights__list-divider"></div>
+          <div class="highlights__item">
+            <img
+              src="./assets/homepage/chocolate-desktop-tablet@2x.jpg"
+              alt="Fruit chocolate mousse"
+              class="highlights__image"
+              height="200"
+            />
+            <div class="text-group text-group_size_small">
+              <h3
+                class="text text_white text_heading_m text-group__heading highlights__item-heading"
+              >
+                <div class="highlights__line-pattern"></div>
+                Summer Fruit Chocolate Mousse
+              </h3>
+              <p class="text text_white text_body_2 text-group__body">
+                Creamy mousse combined with summer fruits and dark chocolate
+                shavings.
+              </p>
+            </div>
           </div>
         </div>
       </section>
