Style "family-gathering" section

--- a/src/index.html
+++ b/src/index.html
@@ -190,55 +190,62 @@
         <img
           src="./assets/patterns/pattern-curve-top-right.svg"
           alt="pattern"
-          class=""
+          class="family-gathering__top-right-pattern"
           height="200"
         />
         <img
           src="./assets/patterns/pattern-lines.svg"
           alt="pattern"
-          class=""
+          class="family-gathering__lines-pattern"
           width="125"
         />
         <img
           src="./assets/homepage/family-gathering-desktop@2x.jpg"
           alt="Family eating dinner at a large Table"
-          class=""
+          class="family-gathering__image"
           height="300"
         />
-        <div
-          class="text-group text-group_size_regular family-gathering__text-group"
-        >
-          <h2 class="text text_heading_l text-group__heading">
-            Family Gathering
-          </h2>
-          <p class="text text_body_1 text-group__body">
-            We love catering for entire families. So please bring everyone along
-            for a special meal with your loved ones. We'll provide a memorable
-            experience for all.
-          </p>
-        </div>
-        <input
-          type="button"
-          class="button text_heading_s"
-          value="BOOK A TABLE"
-        />
-        <ul class="slide-list">
-          <li class="slide-list__item text text_heading_s">FAMILY GATHERING</li>
-          <li class="slide-list__item text text_heading_s">SPECIAL EVENTS</li>
-          <li class="slide-list__item text text_heading_s">SOCIAL EVENTS</li>
-          <img
-            src="./assets/patterns/pattern-divide.svg"
-            alt="pattern"
-            class=""
-            width="50"
+        <div class="family-gathering__container">
+          <div
+            class="text-group text-group_size_regular family-gathering__text-group"
+          >
+            <h2 class="text text_heading_l text-group__heading">
+              Family Gathering
+            </h2>
+            <p class="text text_body_1 text-group__body">
+              We love catering for entire families. So please bring everyone
+              along for a special meal with your loved ones. We'll provide a
+              memorable experience for all.
+            </p>
+          </div>
+          <input
+            type="button"
+            class="button text_heading_s"
+            value="BOOK A TABLE"
           />
-        </ul>
+          <ul class="family-gathering__list">
+            <li class="family-gathering__item text text_heading_s">
+              <div class="family-gathering__line-pattern"></div>
+              FAMILY GATHERING
+            </li>
+            <li
+              class="family-gathering__item text text_inactive text_heading_s"
+            >
+              SPECIAL EVENTS
+            </li>
+            <li
+              class="family-gathering__item text text_inactive text_heading_s"
+            >
+              SOCIAL EVENTS
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section cta">
         <img
           src="./assets/homepage/ready-bg-desktop@2x.jpg"
           alt="Vegetable dish"
-          class=""
+          class="cta__image"
           height="200"
         />
         <h2 class="text text_heading_l">Ready to make a reservation?</h2>
