Style "call to action" section

--- a/src/index.html
+++ b/src/index.html
@@ -242,16 +242,20 @@
         </div>
       </section>
       <section class="section cta">
-        <img
-          src="./assets/homepage/ready-bg-desktop@2x.jpg"
-          alt="Vegetable dish"
-          class="cta__image"
-          height="200"
-        />
-        <h2 class="text text_heading_l">Ready to make a reservation?</h2>
+        <div class="crop cta__crop">
+          <img
+            src="./assets/homepage/ready-bg-desktop@2x.jpg"
+            alt="Vegetable dish"
+            class="cta__image"
+            height="200"
+          />
+        </div>
+        <h2 class="text text_white text_heading_l cta__heading">
+          Ready to make a reservation?
+        </h2>
         <input
           type="button"
-          class="button button_white text_heading_s"
+          class="button button_white text_heading_s cta__button"
           value="BOOK A TABLE"
         />
       </section>
