Fix tab switching to preserve a smooth transition
The position of the text group, button, and tab list remains the same
despite the number of lines in the body changing between different tabs.
This removes the jarring shift in element position on tab switching

--- a/src/index.html
+++ b/src/index.html
@@ -217,7 +217,7 @@
             </div>
             <input
               type="button"
-              class="button text_heading_s"
+              class="button text_heading_s slides__button"
               value="BOOK A TABLE"
             />
             <ul class="slides__list">
