Make the hero section more responsive

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,12 @@
   <body class="body">
     <main class="main">
       <section class="section section_dark hero">
-        <img src="./assets/logo.svg" alt="logo" class="logo" height="30" />
+        <img
+          src="./assets/logo.svg"
+          alt="logo"
+          class="logo hero__logo"
+          height="30"
+        />
         <div class="crop hero__crop">
           <img
             src="./assets/homepage/hero-bg-desktop@2x.jpg"
