Make the highlights section reactive

--- a/src/index.html
+++ b/src/index.html
@@ -126,8 +126,8 @@
             of our diner's favourites. Our menu is revamped every season.
           </p>
         </div>
-        <div class="highlights__list">
-          <div class="highlights__item">
+        <ul class="highlights__list">
+          <li class="highlights__item">
             <img
               src="./assets/homepage/salmon-desktop-tablet@2x.jpg"
               alt="Seared salmon fillet"
@@ -146,9 +146,9 @@
                 summer salad.
               </p>
             </div>
-          </div>
+          </li>
           <div class="highlights__list-divider"></div>
-          <div class="highlights__item">
+          <li class="highlights__item">
             <img
               src="./assets/homepage/beef-desktop-tablet@2x.jpg"
               alt="Rosemary filet mignon"
@@ -167,9 +167,9 @@
                 seasonal sides.
               </p>
             </div>
-          </div>
+          </li>
           <div class="highlights__list-divider"></div>
-          <div class="highlights__item">
+          <li class="highlights__item">
             <img
               src="./assets/homepage/chocolate-desktop-tablet@2x.jpg"
               alt="Fruit chocolate mousse"
@@ -188,8 +188,8 @@
                 shavings.
               </p>
             </div>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
       <script class="slides-template" type="text/x-handlebars-template">
         <section class="section slides">
